Fix card margins on small screens

--- a/website/components/CardGrid/styles.module.css
+++ b/website/components/CardGrid/styles.module.css
@@ -84,7 +84,6 @@ h2 + .homeGrid {
   padding-top: 20px;
 }
 
-p + .cardGrid,
-p + .homeGrid {
-  padding-top: 30px;
+.homeGrid > p {
+  margin-top: var(--ifm-spacing-vertical);
 }
